--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,5 @@ description = "Continuously read,write to memory using random offsets and length
 authors = ["datrs <yoshuawuyts@gmail.com>"]
 
 [dependencies]
+random-access-storage = "0.2.0"
+failure = "0.1.1"
