--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "random-access-memory"
-version = "0.0.1"
+version = "0.1.0"
 license = "Apache-2.0"
 repository = "https://github.com/datrs/random-access-memory"
 documentation = "https://docs.rs/random-access-memory"
@@ -8,7 +8,7 @@ description = "Continuously read,write to memory using random offsets and length
 authors = ["datrs <yoshuawuyts@gmail.com>"]
 
 [dependencies]
-random-access-storage = { path = '../random-access-storage' }
-# random-access-storage = "0.3.0"
+# random-access-storage = { path = '../random-access-storage' }
+random-access-storage = "0.3.0"
 failure = "0.1.1"
 failure_derive = "0.1.1"
