Relicense to MIT OR Apache-2.0

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "random-access-memory"
 version = "0.1.0"
-license = "Apache-2.0"
+license = "MIT OR Apache-2.0"
 repository = "https://github.com/datrs/random-access-memory"
 documentation = "https://docs.rs/random-access-memory"
 description = "Continuously read,write to memory using random offsets and lengths"
