Add .readme field to Cargo.toml

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ repository = "https://github.com/datrs/random-access-memory"
 documentation = "https://docs.rs/random-access-memory"
 description = "Continuously read,write to memory using random offsets and lengths"
 authors = ["datrs <yoshuawuyts@gmail.com>"]
+readme = "README.md"
 
 [dependencies]
 failure = "0.1.1"
