--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,6 @@ readme = "README.md"
 [dependencies]
 failure = "0.1.1"
 random-access-storage = "0.3.0"
+
+[dev-dependencies]
+quickcheck = "0.6.2"
