--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ readme = "README.md"
 edition = "2018"
 
 [dependencies]
-failure = "0.1.6"
+anyhow = "1.0.26"
 random-access-storage = "3.0.0"
 
 [dev-dependencies]
