--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,8 +11,11 @@ edition = "2018"
 
 [dependencies]
 anyhow = "1.0.26"
-random-access-storage = "3.0.0"
+random-access-storage = "4.0.0"
+futures = "0.3.4"
+async-trait = "0.1.24"
 
 [dev-dependencies]
 quickcheck = "0.9.2"
 rand = "0.7.3"
+async-std = { version = "1.5.0", features = ["attributes"] }
