--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ anyhow = "1.0.26"
 random-access-storage = "4.0.0"
 futures = "0.3.4"
 async-trait = "0.1.24"
+intmap = "2.0.0"
 
 [dev-dependencies]
 quickcheck = "0.9.2"
