--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ edition = "2018"
 
 [dependencies]
 anyhow = "1.0.26"
-random-access-storage = "4.0.0"
+random-access-storage = { git = "https://github.com/ttiurani/random-access-storage" , branch = "v10"}
 futures = "0.3.4"
 async-trait = "0.1.24"
 intmap = "2.0.0"
