--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,12 +11,11 @@ edition = "2018"
 
 [dependencies]
 anyhow = "1.0.26"
-random-access-storage = { git = "https://github.com/ttiurani/random-access-storage" , branch = "v10"}
-futures = "0.3.4"
-async-trait = "0.1.24"
+random-access-storage = { git = "https://github.com/ttiurani/random-access-storage" , branch = "tokio"}
+async-trait = "0.1.63"
 intmap = "2.0.0"
 
 [dev-dependencies]
 quickcheck = "0.9.2"
 rand = "0.7.3"
-async-std = { version = "1.5.0", features = ["attributes"] }
+async-std = { version = "1.12.0", features = ["attributes"] }
