--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,3 +19,8 @@ intmap = "2.0.0"
 quickcheck = "0.9.2"
 rand = "0.7.3"
 async-std = { version = "1.12.0", features = ["attributes"] }
+criterion = "0.4"
+
+[[bench]]
+name = "sync"
+harness = false
