--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,8 +15,8 @@ async-trait = "0.1.63"
 intmap = "2.0.0"
 
 [dev-dependencies]
-quickcheck = "0.9.2"
-rand = "0.7.3"
+proptest = "1.1.0"
+proptest-derive = "0.2.0"
 async-std = { version = "1.12.0", features = ["attributes"] }
 criterion = "0.4"
 
